--- a/front-end/src/app/login-page/login-page.css
+++ b/front-end/src/app/login-page/login-page.css
@@ -1,82 +1,167 @@
 .login-container{
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    justify-content: space-between;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
 }
+
 
 .app-title{
 display: flex;
 flex-direction: column;
 width: fit-content;
-margin: 10vh auto;
+margin: 20px auto;
 flex-grow: 0;
 flex-shrink: 0;
 }
 
+h1{
+  font-size:74px;
+}
+
 .user-cue{
-    color: var(--app-brand-color_2);
-    font-size: 0.78rem;
-    font-weight: var(--bold);
+  color: var(--app-brand-color_2);
+  font-size: 16px;
+  font-weight: var(--bold);
 }
 
 .clickable-text{
-    margin-top: 3em;
-    color: var(--clickable-text-color);
-    margin-bottom: 2em;
+  color: var(--clickable-text-color);
+  font-size: 0.5em;
 }
 
 .sign-in{
-    display: flex;
-    gap: 20px;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    flex-grow: 0;
-    flex-shrink: 0;
-    margin-bottom: 0.5em;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-bottom: 0.5em;
 }
 
 
 .social-login-button-wrapper{
-    display: flex;
-    justify-content: space-between;
-    gap: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  gap: 1.5em;
 }
 
 .social-login-button{
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    background: none;
-    color: inherit;
-    padding: 0;
-    border: 0px;
+  height: 160px;
+  max-width: 750px;
+  background: none;
+  color: inherit;
+  padding: 0;
+  border: 0px;
 }
 
-.google{
-    background-image: url('../../../public/web_dark_rd_na.svg');
+.gsi-material-button {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -webkit-appearance: none;
+  background-color: #131314;
+  background-image: none;
+  border: 1px solid #747775;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #e3e3e3;
+  cursor: pointer;
+  font-family: 'Roboto', arial, sans-serif;
+  font-size: 14px;
+  height: 35px;
+  letter-spacing: 0.25px;
+  outline: none;
+  overflow: hidden;
+  padding: 0 12px;
+  position: relative;
+  text-align: center;
+  -webkit-transition: background-color .218s, border-color .218s, box-shadow .218s;
+  transition: background-color .218s, border-color .218s, box-shadow .218s;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 300px;
+  border-color: #8e918f;
 }
 
-/*
-.x{
-    background-image: url('./media/icons/logo.svg');
-    background-color: black;
+.gsi-material-button .gsi-material-button-icon {
+  height: 20px;
+  margin-right: 10px;
+  min-width: 20px;
+  width: 20px;
 }
 
-.instagram{
-    background-image: url('./media/icons/');
+.gsi-material-button .gsi-material-button-content-wrapper {
+  -webkit-align-items: center;
+  align-items: center;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  height: 100%;
+  justify-content: center;
+  position: relative;
+  width: 100%;
 }
-*/
 
+.gsi-material-button .gsi-material-button-contents {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  font-family: 'Roboto', arial, sans-serif;
+  font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  vertical-align: top;
+}
 
-.button{
-    width: clamp( 250px, 100vw, 350px);
-    min-width: 250px;
-    height: 50px;
-    border: var(--primary-button-border);
-    border-radius: 20px;
-    background: var(--app-brand-color_3);
-    color: white;
+.gsi-material-button .gsi-material-button-state {
+  -webkit-transition: opacity .218s;
+  transition: opacity .218s;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.gsi-material-button:disabled {
+  cursor: default;
+  background-color: #13131461;
+  border-color: #8e918f1f;
+}
+
+.gsi-material-button:disabled .gsi-material-button-state {
+  background-color: #e3e3e31f;
+}
+
+.gsi-material-button:disabled .gsi-material-button-contents {
+  opacity: 38%;
+}
+
+.gsi-material-button:disabled .gsi-material-button-icon {
+  opacity: 38%;
+}
+
+.gsi-material-button:not(:disabled):active .gsi-material-button-state,
+.gsi-material-button:not(:disabled):focus .gsi-material-button-state {
+  background-color: white;
+  opacity: 12%;
+}
+
+.gsi-material-button:not(:disabled):hover {
+  -webkit-box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+  box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 1px 3px 1px rgba(60, 64, 67, .15);
+}
+
+.gsi-material-button:not(:disabled):hover .gsi-material-button-state {
+  background-color: white;
+  opacity: 8%;
 }
 
