--- a/front-end/src/app/login-page/login-page.html
+++ b/front-end/src/app/login-page/login-page.html
@@ -9,10 +9,11 @@
 
 
     <!--LOGIN COMPONENT BEGINS-->
+    <app-card variant="primary">
     <article class="sign-in">
         <p class="user-cue">Welcome Back!</p>
         <app-buttons type="button" variant="primary">continue with email</app-buttons>
-        <button class="gsi-material-button" style="width:295">
+        <button class="gsi-material-button" style="width:300">
           <div class="gsi-material-button-state"></div>
           <div class="gsi-material-button-content-wrapper">
             <div class="gsi-material-button-icon">
@@ -24,11 +25,12 @@
                 <path fill="none" d="M0 0h48v48H0z"></path>
               </svg>
             </div>
-            <span class="gsi-material-button-contents">Continue  with Google</span>
-            <span style="display: none;">Sign in with Google</span>
+            <span class="gsi-material-button-contents">Continue with Google</span>
+            <span style="display: none;">Continue with Google</span>
           </div>
         </button>
         <a class="clickable-text" href="url">forget your login?</a>
     </article>
+  </app-card>
     <!--LOGIN COMPONENT ENDS-->
 </div>
