--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -60,3 +60,11 @@ h1{
     line-height: 1.3;
 }
 
+.center-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+}
+
