updated global styles

--- a/front-end/src/app/login-page/login-page.html
+++ b/front-end/src/app/login-page/login-page.html
@@ -8,7 +8,7 @@
     <app-card variant="primary">
     <article class="sign-in">
         <p class="user-cue">Welcome Back!</p>
-        <app-buttons type="button" variant="primary" [routerLink]="['/login-email']">continue with email</app-buttons>
+        <app-button type="button" variant="primary" [routerLink]="['/login-email']">continue with email</app-button>
         <button class="gsi-material-button" style="width:300">
           <div class="gsi-material-button-state"></div>
           <div class="gsi-material-button-content-wrapper">
