--- a/front-end/src/app/login-email/login-email.html
+++ b/front-end/src/app/login-email/login-email.html
@@ -1,3 +1,20 @@
-<app-card>
+<div class="center-container">
 
-</app-card>
+  <div class="app-title">
+    <h1>Enter</h1>
+    <h1>Email</h1>
+  </div>
+
+  <app-card>
+    <form>
+      <div class="field-container">
+        <label for="email">
+          <p class="form-font">Email</p>
+        </label>
+        <input type="email" name="email" id="email" placeholder="email">
+      </div>
+
+      <app-button variant="primary">submit</app-button>
+    </form>
+  </app-card>
+</div>
