--- a/front-end/src/app/login-page/login-page.css
+++ b/front-end/src/app/login-page/login-page.css
@@ -1,12 +1,3 @@
-.app-title{
-display: flex;
-flex-direction: column;
-width: fit-content;
-margin: 20px auto;
-flex-grow: 0;
-flex-shrink: 0;
-}
-
 h1{
   font-size:74px;
 }
@@ -24,7 +15,7 @@ h1{
 
 .sign-in{
   display: flex;
-  gap: 20px;
+  gap: var(--standard-gap);
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -33,12 +24,6 @@ h1{
   margin-bottom: 0.5em;
 }
 
-
-.social-login-button-wrapper{
-  display: flex;
-  justify-content: space-between;
-  gap: 1.5em;
-}
 
 .social-login-button{
   height: 160px;
